--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
             </div>
             <div>
                 <ul class="ul-top">
-                    <li><a href="#">Products </a></li>
-                    <li><a href="#">Customers </a></li>
-                    <li><a href="#">Pricing </a></li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Welcome</a></li>
+                    <li><a href="#">About us </a></li>
+                    <li><a href="#">Contact </a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
             </div>
-            <div>
-                <button class="signin" onclick="">Sign In</button>
-                <button class="signup" onclick="">Sign up</button>
-            </div>
+            
         </nav>
     </header>
 
