--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                         
         </nav>
     </header>
-
-    
+    <div>
+    <div> some text </div>
+    <div>som text and pictures, bla bla bla, </div>
+</div>
 </body>
 </html>
