--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
         </nav>
     </header>
     <div>
-    <div> some text </div>
+    <div> <img src="images/drops.webp" alt=""></div>
     <div>som text and pictures, bla bla bla, </div>
+</div>
+
+<div> <img src="images/pool.jpg.jpg" alt="">
+    <p>Now is the winter of our discontent
+        Made glorious summer by this sun of York;
+        And all the clouds that lour'd upon our house
+        In the deep bosom of the ocean buried.
+        Now are our brows bound with victorious wreaths;
+        Our bruised arms hung up for monuments;
+        Our stern alarums changed to merry meetings,
+        Our dreadful marches to delightful measures.</p>
+
 </div>
 </body>
 </html>
